objects/redwing__Question_Bank_Question__c.object
<CustomObject>
    <fields>
        <fullName>redwing__Allow_Partial_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Partial Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Answer_Sequence__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Answer Sequence</label>
        <referenceTo>redwing__Answer_Sequence__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Question_Bank_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Correct_Boolean__c</fullName>
        <label>Correct True/False</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>true</fullName>
                </value>
                <value>
                    <fullName>false</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>redwing__Correct_Number__c</fullName>
        <label>Correct Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Description_RTA__c</fullName>
        <label>Additional Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>redwing__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>redwing__Max_Answers__c</fullName>
        <label>Max Answers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>redwing__Question_Bank__c</fullName>
        <label>Question Bank</label>
        <referenceTo>redwing__Question_Bank__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Question_Bank_Questions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>redwing__Question_Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question Topic</label>
        <referenceTo>redwing__Question_Topic__c</referenceTo>
        <relationshipLabel>Questions</relationshipLabel>
        <relationshipName>Question_Bank_Questions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>redwing__Randomize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Randomize Answers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>redwing__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Text</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>SelectOneQuestion</fullName>
                </value>
                <value>
                    <fullName>SelectMultipleQuestion</fullName>
                </value>
                <value>
                    <fullName>True/False</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Question Bank Question</label>
    <nameField>
        <displayFormat>QBQ-{0000000}</displayFormat>
        <label>Question ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Question Bank Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>redwing__AnswerSequence_Required</fullName>
        <active>true</active>
        <description>Display an error message when a type that requires an answer sequence chose and no answer sequence is defined</description>
        <errorConditionFormula>(TEXT( redwing__Type__c )==&quot;SelectOneQuestion&quot; || TEXT( redwing__Type__c )==&quot;SelectMultipleQuestion&quot;) &amp;&amp;  ISBLANK(redwing__Answer_Sequence__c)</errorConditionFormula>
        <errorMessage>You must specify an answer sequence for this type of question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>redwing__CorrectBoolean_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(redwing__Correct_Boolean__c)) &amp;&amp;  TEXT(redwing__Type__c) == &quot;True/False&quot;</errorConditionFormula>
        <errorMessage>You must specify a correct true/false value for this type of question</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>redwing__CorrectNumber_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(redwing__Correct_Number__c)) &amp;&amp; TEXT(redwing__Type__c) == &quot;Number&quot;</errorConditionFormula>
        <errorMessage>You must specify a correct number value when defining a Number type of question</errorMessage>
    </validationRules>
</CustomObject>